addet table, array with cross and circle and looking for svg circle and cross with animation

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <link rel="icon" type="image/x-icon" href="">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
 </head>
-<body>
-    
-    
+<body onload="init()">
+    <h1>Tic Tac Toe</h1>
+
+    <div id="content"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
