Abeänderte Funktionen und Design

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <div id="content"></div>
 
+    <div class="center">
+        <button>Spiel neu starten</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
